# Decision-Tree-Based-Symbolic-Reasoning-LLM

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  gemini.yaml
data/sample/: test.jsonl  train.jsonl  val.jsonl
docs/: ARCHITECTURE.md
scripts/: infer.py  make_sample_dataset.py  train_eval.py
src/tree_llm_reasoner/: __init__.py  config.py  data.py  features.py  llm_agents.py  orchestrator.py  pipeline.py  plots.py  tree_oracle.py
tests/: test_smoke.py
