[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-llm-reasoner"
version = "0.1.0"
description = "Hybrid decision-tree oracle plus LLM-agent orchestrator for ProofWriter-style reasoning."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Andrew Kiruluta"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "torch>=2.1",
  "matplotlib>=3.7",
  "tqdm>=4.66",
  "joblib>=1.3",
  "pyyaml>=6.0",
  "datasets>=2.14",
  "google-generativeai>=0.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]
